@@ -74,9 +74,9 @@ public class CustomTagParser implements ModuleParser {
                     } else if (type.equals("string")) {
                         tags.add(new CustomTagImpl(child.getName(), child.getText()));
                     } else if (type.equals("int")) {
-                        tags.add(new CustomTagImpl(child.getName(), new Integer(child.getTextTrim())));
+                        tags.add(new CustomTagImpl(child.getName(), Integer.valueOf(child.getTextTrim())));
                     } else if (type.equals("float")) {
-                        tags.add(new CustomTagImpl(child.getName(), new Float(child.getTextTrim())));
+                        tags.add(new CustomTagImpl(child.getName(), Float.valueOf(child.getTextTrim())));
                     } else if (type.equals("intUnit")) {
                         tags.add(new CustomTagImpl(child.getName(), new IntUnit(child.getTextTrim())));
                     } else if (type.equals("floatUnit")) {
